--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Odin's Etch-a-Sketch</title>
   </head>
   <body>
-    <div id="root"></div>
+    <label for="sqs-per-side">Number of squares per side</label>
+    <input
+      type="text"
+      name="sq-per-side"
+      id="sq-per-side"
+      class="js-sq-per-side"
+    />
+    <input type="button" value="Create" class="button js-create-btn" />
+    <div class="canvas js-canvas"></div>
   </body>
 </html>
