Add random color for drawing

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       class="js-sq-per-side"
     />
     <input type="button" value="Create" class="button js-create-btn" />
+    <input type="button" value="Random color" class="js-random-btn" />
     <div class="canvas js-canvas"></div>
   </body>
 </html>
