Remove focus after click from buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="button" value="Default mode" class="js-default-btn" />
         <input type="button" value="Random color mode" class="js-random-btn" />
       </div>
-      <div>Press space once to start drawing. press space again to stop.</div>
+      <div>Press space once to start drawing. press space again to pause.</div>
       <div class="canvas eas__canvas js-canvas"></div>
     </main>
   </body>
